manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-tracker-rs
  namespace: task-tracker-rs
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: task-tracker-rs
  template:
    metadata:
      labels:
        app: task-tracker-rs
    spec:
      containers:
      - name: task-tracker-rs
        image: jontismo/task-tracker-rs
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
          - name: task-tracker-rs
            mountPath: /app/data
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
      volumes:
      - name: task-tracker-rs
        nfs:
          server: 192.168.1.13
          path: /srv/data/task-data
