manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-tracker-rs
  namespace: task-tracker-rs
spec:
  selector:
    app: task-tracker-rs
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
